# beancount-protobuf

./: pyproject.toml
.github/workflows/: tests.yml
protos/: README.md  account.proto  account_pb2.py  account_pb2.pyi  user.proto  user_pb2.py  user_pb2.pyi
src/beancount2proto/: README.md  main.py
tests/beancount2proto/: test_main.py
